# iroh-duck

./: Cargo.toml  README.md
src/: main.rs
tauri/iroh-duck/: index.html  package-lock.json  package.json  tailwind.config.ts
tauri/iroh-duck/src/: App.tsx  BlobRanges.tsx  Blobs.tsx  Terminal.tsx  main.tsx  store.ts  styles.css  types.ts  util.ts
tauri/iroh-duck/src-tauri/: Cargo.toml  tauri.conf.json
tauri/iroh-duck/src-tauri/src/: main.rs
tauri/iroh-duck/src-tauri/src/iroh_gateway/: gateway.rs  mod.rs
tauri/iroh-duck/src/chrome/: Button.tsx  Card.tsx  CodeBlock.tsx  DangerButton.tsx  ErrorMessage.tsx  Heading.tsx  Logo.tsx  Logotype.tsx  Page.tsx  SearchBox.tsx  Spinner.tsx  Steps.tsx  Switch.tsx  Tabs.tsx  Tag.tsx  ThemeToggle.tsx
tauri/iroh-duck/src/forms/: Checkbox.tsx  FileUpload.tsx  Input.tsx  Select.tsx  Textarea.tsx
tauri/iroh-duck/src/slideOver/: SlideOver.tsx  SlideOverLayout.tsx  slideOvers.ts
tauri/iroh-duck/src/sources/: SourceDetailsSideSheet.tsx  Sources.tsx  SourcesTable.tsx
