[package]
name = "iroh-duck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
duckdb = "0.9.2"
futures = "0.3.30"
iroh = "0.12.0"
tempfile = "3.9.0"
tokio = { version = "1.35.1", features = ["full"] }
url = "2.5.0"
